Docs: fix page width jumping on scrollbar appear

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -136,10 +136,3 @@
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
-
-html, .VPSidebar {
-  scrollbar-width: thin;
-}
-.VPSidebar {
-  scrollbar-gutter: stable;
-}
